# SecurePasswordGenerator

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml
docs/: release-v1.0.0.md
scripts/: build_deb.py  build_windows.ps1
src/secure_random_password_generator/: __init__.py  __main__.py  cli.py  gui.py  password_core.py  secure_store.py
tests/: run_tests.py
